deployment/buildbuddy-app.enterprise.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: buildbuddy
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: buildbuddy-app
  namespace: buildbuddy
spec:
  replicas: 1
  serviceName: buildbuddy-app
  selector:
    matchLabels:
      app: buildbuddy-app
  template:
    metadata:
      labels:
        app: buildbuddy-app
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool
      containers:
        - name: buildbuddy-app
          image: gcr.io/flame-public/buildbuddy-app-enterprise:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
            - name: grpc
              containerPort: 1985
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: "/config.yaml"
              name: config
              subPath: "config.yaml"
      volumes:
        - name: "config"
          configMap:
            name: "config"
  volumeClaimTemplates:
      - metadata:
          name: data
        spec:
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: buildbuddy-app-service
  namespace: buildbuddy
spec:
  selector:
    app: buildbuddy-app
  ports:
    - name: http
      protocol: 'TCP'
      port: 80
      targetPort: 8080
    - name: grpc
      protocol: 'TCP'
      port: 1985
      targetPort: 1985
  type: LoadBalancer
