deployment/buildbuddy-app.dev.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: buildbuddy-dev
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: buildbuddy-app
  namespace: buildbuddy-dev
spec:
  selector:
    matchLabels:
      app: buildbuddy-app
  replicas: 1
  template:
    metadata:
      labels:
        app: buildbuddy-app
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool
      containers:
        - name: buildbuddy-app
          image: gcr.io/flame-build/buildbuddy-app:server_image
          imagePullPolicy: Always
          args: ["--config_file=config/buildbuddy.dev.yaml"]
          ports:
            - name: http
              containerPort: 8080
            - name: grpc
              containerPort: 1985
          volumeMounts:
            - mountPath: /devdata
              name: buildbuddy-app-data
      volumes:
        - name: buildbuddy-app-data
          persistentVolumeClaim:
            claimName: buildbuddy-app-claim
---
apiVersion: v1
kind: Service
metadata:
  name: buildbuddy-app-service
  namespace: buildbuddy-dev
spec:
  selector:
    app: buildbuddy-app
  ports:
    - name: http
      protocol: 'TCP'
      port: 80
      targetPort: 8080
    - name: grpc
      protocol: 'TCP'
      port: 1985
      targetPort: 1985
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: buildbuddy-app-ingress
  namespace: buildbuddy-dev
  annotations:
      networking.gke.io/managed-certificates: "buildbuddy-dev-certificate,app-buildbuddy-dev-certificate"
spec:
  rules:
    - host: buildbuddy.dev
      http:
        paths:
          - backend:
              serviceName: buildbuddy-app-service
              servicePort: 80
    - host: app.buildbuddy.dev
      http:
        paths:
          - backend:
              serviceName: buildbuddy-app-service
              servicePort: 80
